Alteração Título Section Perguntas Frequentes

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="container d-flex justify-content-center">
       <div class="row align-items-start">
         <div class="col-md-12 mb-4 mb-md-0">
-          <h1 class="display-4 text-center pb-5" style="color:gray;">Perguntas Frequentes</h1>
+          <h1 class="display-4 text-center pb-5" style="color:white;">Perguntas Frequentes</h1>
           <p>
             1. Quais serviços a MMV oferece?<br>
             Resposta: A MMV Serviços Contábeis oferece uma ampla gama de soluções contábeis para micro e pequenas empresas, MEIs e 
